styles.css
/* Structure */

body {
    background-color: #020122;
    color: #F2F3AE;
}

#main-header {
    text-align: center;
    background-color: #020122;
    padding: 5px;
    margin: 10px;
    border: 7px solid #F4442E;
    border-radius: 10px;
}

footer {
    margin: 10px;
    padding: 20px 10px;
    background: #020122;
    border-radius: 10px;
    border: 7px solid #F4442E;
    text-align: center;
}

.assignments-1of3 {
    margin: 10px;
    padding: 40px 20px;
    background: #F4442E;
    border-radius: 10px;
    border: 7px solid #FC9E4F;
    text-align: center;
}

/* Images */

img {
    max-width: 100%;
    display: block;
    margin: auto;
}

/* Navigation */

a {
    color:black;
    text-decoration: none;
}

a:hover {
    color: orange;
}


/* Typography */

body {
    font-family: Arial, Helvetica, sans-serif;
}

footer {
    font-size: 18px;
    font-weight: bolder;
    color:#F2F3AE;
}

p, h1, h2 {
    color: #F2F3AE;
    text-align: center;
}

.assignments-1of3 p {
    font-size: 18px;
}

.assignments-1of3 a {
    font-size: 20px;
    font-weight: bolder;
}

/* Larger Resolutions */

@media only screen and (min-width: 900px) {
    .flex-container {
        display: flex;
        flex-wrap: wrap;
    }

    .assignments-1of3 {
        flex: 25%;
    }
}

